--- a/Desktop/homepage/src/components/leftcard/leftcard.module.scss
+++ b/Desktop/homepage/src/components/leftcard/leftcard.module.scss
@@ -14,6 +14,7 @@
     margin-top:20px;
     border-radius: 6px;
     transition: .3s;
+    backdrop-filter: blur(20px);
 }
 .all:hover{
     width:71%;
