--- a/Desktop/homepage/src/index.css
+++ b/Desktop/homepage/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.bcg{
+    position: fixed;
+    /* width:100%; */
+    height:100%;
+}
